<resources>
    <string name="welcome_to_quicktalk">Welcome to QuickTalk</string>
    <string name="app_name">QuickTalk</string>
    <string name="messenger">Messenger</string>
    <string name="write_email">Write email</string>
    <string name="Password">Password</string>
    <string name="registration_upper">Registration</string>
    <string name="password">Password</string>
    <string name="write_password">Write password</string>
    <string name="forgot_password">forgot password</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="send_message">Send message</string>
    <string name="reset_password">Reset password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="the_reset_link_sent">The reset link has been successfully sent</string>
    <string name="john_smith_27">John Smith, 27</string>
    <string name="type_your_message">Type your message:</string>
    <string name="_0_00">0:00</string>
    <string name="play_voice_message">Воспроизвести голосовое сообщение</string>
    <string name="todo">TODO</string>
    <string name="attach_file">Attach File</string>
</resources>